lab02/exercise2/cloudformation/modules/security-groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Security Groups Module'

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID

  AllowedSSHCidr:
    Type: String
    Default: 0.0.0.0/0
    Description: CIDR block allowed to connect to public EC2 via SSH

Resources:
  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for public EC2 instance
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AllowedSSHCidr
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: lab01-public-ec2-sg

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for private EC2 instance
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref PublicSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: lab01-private-ec2-sg

Outputs:
  PublicSecurityGroupId:
    Description: Public Security Group ID
    Value: !Ref PublicSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-PublicSecurityGroupId

  PrivateSecurityGroupId:
    Description: Private Security Group ID
    Value: !Ref PrivateSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-PrivateSecurityGroupId
